feat: massive expansion of Pi Java capabilities including RPC mode, Package management, and Bedrock provider
- Implement comprehensive RpcModeRunner with full RPC server/client semantics for IDE integration
- Substantially expand PackageManager, PackageManagerCli, and PackageResourceResolver for advanced package dependency management, settings persistence, and resource discovery
- Introduce InteractiveOutputRenderer and expand InteractiveModeRunner rendering capabilities
- Enhance AgentSession and SessionManager state, persistence, and compaction support
- Upgrade BedrockProvider payload construction with prompt caching, consecutive tool result merging, and Claude thinking signature fallback
- Extensively expand tests across CLI, core session, package manager, and built-in providers
- Update JAVA_MIGRATION_EXECUTION_PROGRESS.md with massive optimizations up to 151